# MouseTrail

./: .gitignore  CMakeLists.txt  README.md
include/: particles.h  resource.h  utils.h  window.h
resources/: app.rc
src/: main.cpp  particles.cpp  utils.cpp  window.cpp
